# ha-wolt-watch

./: .gitignore  CONTRIBUTING.md  HACS_BEST_PRACTICES_IMPLEMENTED.md  LICENSE  README.md  SECURITY.md  hacs.json  info.md  project_background.md  pyproject.toml  quality_scale.yaml  requirements-dev.txt
.cursor/rules/: development-checklist.mdc  development-setup.mdc  github-actions-monitoring.mdc  hacs-integration.mdc  project-structure.mdc  testing-guidelines.mdc  testing-workflow.mdc  uv-commands.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: hassfest.yml  release.yml  validate.yml
brands/: README.md
custom_components/wolt_watch/: __init__.py  const.py  exceptions.py  manifest.json  services.yaml
tests/: __init__.py  conftest.py  test_basic.py  test_const.py  test_exceptions.py  test_init.py  test_real_integration.py
www/: wolt-watch-card.js
